--- a/kali.yml
+++ b/kali.yml
@@ -13,8 +13,9 @@ services:
         cap_add:
             - NET_ADMIN
         ports:
-            - "2222:22"  # SSH access
-            - "8080:8080"  # Web server or other services
+            - "8006:8006"
+            - "3389:3389/tcp"
+            - "3389:3389/udp"server or other services
         tty: true
         stdin_open: true
         restart: unless-stopped
